@@ -665,7 +665,7 @@ jdoubleArray callback_hess)
   else {
     printf("\n\n*** The problem FAILED!\n");
   }
-  
+
 
   // As the SmartPtrs go out of scope, the reference count
   // will be decremented and the objects will automatically
@@ -685,7 +685,11 @@ jlong pipopt){
 	Jipopt *problem = (Jipopt *)pipopt;
 
 	if(problem!=NULL){
-		delete problem;
+	   /* if OptimizeTNLP has been called, application holds a smartptr to the problem
+	    *   so freeing the application will also free the problem itself
+	    * if OptimizeTNLP has not been called, we will have a memory leak here
+	    */
+	   problem->application = NULL;
 	}
 }
 
